# MeshTalk

./: .replit  README.md  fooocus_colab.ipynb  pyproject.toml
attached_assets/: Pasted--AI-Prompt-Build-MeshTalk-A-Quantum-Resistant-AI-Powered-Offline-Mesh-Communication-System-Go-1746918279581.txt
docs/: protocol.md
lib/: main.dart
lib/ai/: speech_commands.dart
lib/models/: message.dart  peer.dart
lib/services/: crypto_service.dart  mesh_routing.dart  webrtc_service.dart
lib/ui/: chat_screen.dart  mesh_visualization.dart  walkie_talkie.dart
server/: ai_voice.py  app.py  auth.py  crypto.py  database.py  manage_db.py  mesh_relay.py  models.py
server/static/: index.html
